--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.1",
+    "animejs": "^3.2.2",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
