--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.1",
+    "@vercel/analytics": "^1.1.1",
     "animejs": "^3.2.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
